test/corpus/casting.txt
=====================
Dynamic Type Casting
=====================

Button b = widget as Button;

---

(source_file
    (declaration 
        (camel_cased_identifier)
        (identifier)
        (dynamic_cast (identifier) (camel_cased_identifier))
    )
)
