test/corpus/error_handling.txt
======================
Try / Catch statement
======================

try {
    i = 1;
} catch (Error e) {
    error (e.message);
}

---

(source_file
    (try_statement 
        (block
            (assignment (identifier) (number))
        )
        (parameter_list 
            (parameter (identifier) (identifier))
        )
        (block
            (function_call 
                (identifier) 
                (parameter_list (parameter
                    (identifier) (identifier)
                ))
            )
        )
    )
)


================================
Function definition with throws 
================================

void my_method() throws IOError {
    // ...
}

---

(source_file
    (function_definition 
        (primitive_type) 
        (identifier) 
        (parameter_list) 
        (throws_declarator (identifier)) 
        (block
            (comment)
        )
    )
)


============
Throw error
============

if (something_went_wrong) {
    throw new IOError.FILE_NOT_FOUND("Requested file could not be found.");
}

---

(source_file
    (if_statement (identifier) (block
        (throw_error (new_instance (function_call
            (identifier) (identifier)
            (parameter_list
                (parameter (string_literal))
            )
        )))
    ))
)
